# speechllm

./: .gitignore  README.md  pyproject.toml
config/: train.yaml
speechllm/: __init__.py  arguments.py  cli.py  constants.py  conversation.py  launch.py  train.py
speechllm/config/: paper.yaml  test1.yaml  train.yaml
speechllm/config/accelerate/: deepspeed.yaml
speechllm/config/deepspeed/: zero2.json
speechllm/dataset/: __init__.py  speech_dataset.py  utils.py
speechllm/framework_template/: test_downsample.py  train_speechllm.py
speechllm/model/: __init__.py  configuration_speechllm.py  downsample.py  modeling_speechllm.py  projector.py  speech_encoder.py  text_decoder.py
