[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "speechllm"
version = "0.1.0"
description = "SpeechLLM"
requires-python = ">=3.8"
authors = [
    { name="Stefano Perna", email="pernastefano99@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "datasets==3.6.0",
    "transformers==4.45.0",
    "librosa",
    "soundfile==0.13.1",
    "wheel",
    "accelerate==0.34.0",
]

[project.optional-dependencies]
train = ["deepspeed==0.15.3", "ninja", "wandb"]

[tool.setuptools]
packages = ["speechllm"]
package-dir = {"speechllm" = "speechllm"}
